fix entrypoint mistake of thermal_motion

--- a/thermal_motion/index.html
+++ b/thermal_motion/index.html
@@ -34,6 +34,6 @@
         <main>
             <canvas id="app" width="1000" height="700"></canvas>
         </main>
-        <script type="module" src="./index.mjs"></script>
+        <script type="module" src="./bundle.js"></script>
     </body>
 </html>
