polishing thermal_motion

--- a/thermal_motion/index.html
+++ b/thermal_motion/index.html
@@ -25,7 +25,9 @@
                 "imports": {
                     "three": "../libs/three.module.js",
                     "three/examples/jsm/": "../libs/three/jsm/",
-                    "@babylonjs/havok": "../libs/HavokPhysics_es.js"
+                    "@babylonjs/havok": "../libs/HavokPhysics_es.js",
+                    "@dimforge/rapier3d-compat": "https://cdn.skypack.dev/@dimforge/rapier3d-compat@0.11.2",
+                    "lil-gui": "../libs/lil-gui.esm.js"
                 }
             }
         </script>
